--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "cypress": "^2.1.0",
+    "cypress-cucumber-preprocessor": "^0.6.0",
     "cypress-eslint-preprocessor": "^1.2.1",
     "eslint": "^4.19.1",
     "eslint-config-standard": "^11.0.0",
