--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "local-it": "export CYPRESS_NODE_ENV=local && node_modules/.bin/cypress open",
 
     "dev": "export CYPRESS_NODE_ENV=dev && node_modules/.bin/cypress verify && node_modules/.bin/cypress run",
-    "dev-it": "export CYPRESS_NODE_ENV=dev && node_modules/.bin/cypress open"
+    "dev-it": "export CYPRESS_NODE_ENV=dev && node_modules/.bin/cypress open",
+    "cypress": "export CYPRESS_NODE_ENV=dev && node_modules/.bin/cypress"
   },
   "author": "",
   "license": "ISC",
